counter and async update

--- a/movie.html
+++ b/movie.html
@@ -17,7 +17,7 @@
   const resultsP = document.getElementById('results');
 
 
-  async function search() {
+  function search() {
     const options = {
       method: 'GET',
         headers: {
