--- a/counter.html
+++ b/counter.html
@@ -12,10 +12,15 @@
 <script>
   const counter = document.getElementById('counter');
   let count = 0;
+
   setInterval(() => {
     count++;
     counter.innerText = count;
   }, 1000);
+
+  setTimeout(() => {
+    alert('You have been on this page for 5 seconds');
+  }, 5000);
 
 </script>
 </html>
