API key removed from public

--- a/movie.html
+++ b/movie.html
@@ -21,7 +21,8 @@
 
   // create a function that will search for movies and display the results
   function search() {
-    const apikey = 'eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJmNTYyNmVmNTczNjkyNjgyNzZjNGVhNzI0MjdhNmQxYiIsInN1YiI6IjY0NWU5NTM3ZDZjMzAwMDE2YmJmZGQwMyIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.a10lLAwX-BJ0XVSeYi_sf6vZ_maOeV8RZzOsG6C7X10'
+    // put your api key here
+    const apikey = 'put_your_api_key_here'
     // this options object will be used in our fetch request for authentication
     const options = {
       method: 'GET',
