--- a/movie.html
+++ b/movie.html
@@ -18,7 +18,6 @@
   const searchButton = document.getElementById('search');
   const resultsP = document.getElementById('results');
 
-
   // create a function that will search for movies and display the results
   function search() {
     // put your api key here
@@ -35,27 +34,36 @@
     // get the title from the input box
     const title = titleBox.value;
     // make a fetch request to the movie database api, movie search endpoint, filling in the title from the input box
+    // look here for documentation: https://developer.themoviedb.org/reference/search-movie
     fetch(`https://api.themoviedb.org/3/search/movie?query=${title}&include_adult=false&language=en-US&page=1`, options)
+
       // convert the response to json (callback function for the promise)
       .then(response => response.json())
+
       // add a second .then to the promise chain to do something with the json data
       .then(moviesData => {
         // for each movie in the results, get the cast
         for (let result in moviesData.results) {
           // get the id of the movie
           const id = moviesData.results[result].id;
+
           // make a fetch request to the movie database api, movie credits endpoint, filling in the id of the movie
+          // look here for documentation: https://developer.themoviedb.org/reference/movie-credits
           fetch(`https://api.themoviedb.org/3/movie/${id}/credits`, options)
+
           // convert the response to json (callback function for the promise)
           .then(response => response.json())
+
           // add a second .then to the promise chain to do something with the json data
           .then(castData => {
             // display the title of the movie (try to move this line before the second fetch request to see what happens)
             resultsP.innerText += moviesData.results[result].title + '\n';
+
             // for each cast member in the results, display their name
             for (let cast in castData.cast) {
               resultsP.innerText += castData.cast[cast].name + ', ';
             }
+
             // add a new line after each movie
             resultsP.innerText += '\n';
           })
